<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/detail_padding"
    android:paddingRight="@dimen/detail_padding"
    android:paddingBottom="48dp">

    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="10">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="4">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/model" />

                <TextView
                    android:id="@+id/model"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="6">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/manufacturer" />

                <TextView
                    android:id="@+id/manufacturer"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="10">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="4">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/starship_class" />

                <TextView
                    android:id="@+id/starship_class"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="6">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/cost_in_credits" />

                <TextView
                    android:id="@+id/cost_in_credits"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>



    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="10">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="4">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/length" />

                <TextView
                    android:id="@+id/length"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="6">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/cargo_capacity" />

                <TextView
                    android:id="@+id/cargo_capacity"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="10">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="4">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/crew" />

                <TextView
                    android:id="@+id/crew"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="3">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/passengers" />

                <TextView
                    android:id="@+id/passengers"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="3">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/consumables" />

                <TextView
                    android:id="@+id/consumables"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>



    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="10">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="4">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/hyperdrive_rating" />

                <TextView
                    android:id="@+id/hyperdrive_rating"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="3">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/mglt" />

                <TextView
                    android:id="@+id/mglt"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="3">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/max_atmosphering_speed" />

                <TextView
                    android:id="@+id/max_atmosphering_speed"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>