<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/detail_padding"
    android:paddingRight="@dimen/detail_padding"
    android:paddingBottom="48dp">

    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="2">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="1">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/classification" />

                <TextView
                    android:id="@+id/classification"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="1">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/homeworld" />

                <TextView
                    android:id="@+id/homeworld"
                    style="@style/TextView.DetailItem.Clickable" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="2">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="1">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/designation" />

                <TextView
                    android:id="@+id/designation"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="1">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/language" />

                <TextView
                    android:id="@+id/language"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="2">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="1">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/average_height" />

                <TextView
                    android:id="@+id/average_height"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="1">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/average_lifespan" />

                <TextView
                    android:id="@+id/average_lifespan"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="3">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="1">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/skin_colors" />

                <TextView
                    android:id="@+id/skin_colors"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="1">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/hair_color" />

                <TextView
                    android:id="@+id/hair_color"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="1">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/eye_colors" />

                <TextView
                    android:id="@+id/eye_colors"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>