<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/detail_padding"
    android:paddingRight="@dimen/detail_padding"
    android:paddingBottom="48dp">

    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="10">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="4">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/climate" />

                <TextView
                    android:id="@+id/climate"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="6">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/terrain" />

                <TextView
                    android:id="@+id/terrain"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>



    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="10">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="4">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/population" />

                <TextView
                    android:id="@+id/population"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="3">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/diameter" />

                <TextView
                    android:id="@+id/diameter"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="3">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/surface_water" />

                <TextView
                    android:id="@+id/surface_water"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


    <LinearLayout style="@style/LinearLayout.DetailRow"
        android:weightSum="10">

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="4">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/gravity" />

                <TextView
                    android:id="@+id/gravity"
                    style="@style/TextView.DetailItem" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="3">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/rotation_period" />

                <TextView
                    android:id="@+id/rotation_period"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.DetailItem"
            android:layout_weight="3">

            <LinearLayout style="@style/LinearLayout.DetailItem">

                <TextView
                    style="@style/TextView.Overline.DetailItem"
                    android:text="@string/orbital_period" />

                <TextView
                    android:id="@+id/orbital_period"
                    style="@style/TextView.DetailItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>